hw2/y.output
   0  $accept : program $end

   1  program : external_declaration
   2          | program external_declaration

   3  external_declaration : declaration
   4                       | function_definition

   5  declaration : type_list init_declarator_list ';'

   6  stmt : compound_stmt
   7       | expression_stmt
   8       | selection_stmt
   9       | iteration_stmt
  10       | jump_stmt

  11  function_definition : type_list declarator compound_stmt
  12                      | declarator compound_stmt
  13                      | type_list declarator declaration_list compound_stmt
  14                      | declarator declaration_list compound_stmt

  15  declaration_list : declaration_list declaration
  16                   | declaration

  17  switch_clauses : '{' switch_clause '}'
  18                 | '{' '}'

  19  switch_clause : switch_clause stmt
  20                | switch_clause labeled_stmt
  21                | labeled_stmt

  22  labeled_stmt : CASE expression ':'
  23               | DEFAULT ':'

  24  compound_stmt : '{' '}'
  25                | '{' compound_stmt_contents '}'

  26  compound_stmt_contents : declaration
  27                         | stmt
  28                         | compound_stmt_contents declaration
  29                         | compound_stmt_contents stmt

  30  expression_stmt : ';'
  31                  | expression ';'

  32  selection_stmt : IF '(' expression ')' compound_stmt
  33                 | IF '(' expression ')' compound_stmt ELSE compound_stmt
  34                 | SWITCH '(' expression ')' switch_clauses

  35  iteration_stmt : WHILE '(' expression ')' stmt
  36                 | DO stmt WHILE '(' expression ')' ';'
  37                 | FOR '(' ';' ';' ')' stmt
  38                 | FOR '(' expression ';' ';' ')' stmt
  39                 | FOR '(' ';' expression ';' ')' stmt
  40                 | FOR '(' ';' ';' expression ')' stmt
  41                 | FOR '(' expression ';' expression ';' ')' stmt
  42                 | FOR '(' expression ';' ';' expression ')' stmt
  43                 | FOR '(' ';' expression ';' expression ')' stmt
  44                 | FOR '(' expression ';' expression ';' expression ')' stmt

  45  jump_stmt : CONTINUE ';'
  46            | BREAK ';'
  47            | RETURN ';'
  48            | RETURN expression ';'

  49  type_list : type_list type
  50            | type

  51  type : CONST
  52       | SIGNED
  53       | UNSIGNED
  54       | SHORT
  55       | LONG
  56       | VOID
  57       | INT
  58       | CHAR
  59       | FLOAT
  60       | DOUBLE

  61  init_declarator_list : init_declarator_list ',' init_declarator
  62                       | init_declarator

  63  init_declarator : declarator
  64                  | declarator '=' initializer

  65  declarator : pointer direct_declarator
  66             | direct_declarator

  67  direct_declarator : IDENT
  68                    | direct_declarator '[' expression ']'
  69                    | direct_declarator '[' ']'
  70                    | '(' declarator ')'
  71                    | direct_declarator '(' parameter_list ')'
  72                    | direct_declarator '(' identifier_list ')'
  73                    | direct_declarator '(' ')'

  74  parameter_list : parameter_declaration
  75                 | parameter_list ',' parameter_declaration

  76  parameter_declaration : type_list declarator
  77                        | type_list abstract_declarator
  78                        | type_list

  79  identifier_list : IDENT
  80                  | identifier_list ',' IDENT

  81  pointer : '*'
  82          | pointer '*'

  83  initializer : assignment_expression
  84              | '{' initializer_list '}'

  85  initializer_list : initializer
  86                   | initializer_list ',' initializer

  87  expression : assignment_expression
  88             | expression ',' assignment_expression

  89  assignment_expression : conditional_expression
  90                        | constant_expression assignment_op assignment_expression

  91  assignment_op : '='

  92  constant_expression : conditional_expression

  93  conditional_expression : logical_or_expression
  94                         | logical_or_expression '?' expression ':' conditional_expression

  95  logical_or_expression : logical_and_expression
  96                        | logical_or_expression OR logical_and_expression

  97  logical_and_expression : inclusive_or_expression
  98                         | logical_and_expression AND inclusive_or_expression

  99  inclusive_or_expression : exclusive_or_expression
 100                          | inclusive_or_expression '|' exclusive_or_expression

 101  exclusive_or_expression : and_expression
 102                          | exclusive_or_expression '^' and_expression

 103  and_expression : equality_expression
 104                 | and_expression '&' equality_expression

 105  equality_expression : relational_expression
 106                      | equality_expression EQUALS relational_expression
 107                      | equality_expression NOT_EQUALS relational_expression

 108  relational_expression : shift_expression
 109                        | relational_expression '<' shift_expression
 110                        | relational_expression '>' shift_expression
 111                        | relational_expression LESS_OR_EQUAL shift_expression
 112                        | relational_expression GREATER_OR_EQUAL shift_expression

 113  shift_expression : additive_expression
 114                   | shift_expression LEFT_SHIFT additive_expression
 115                   | shift_expression RIGHT_SHIFT additive_expression

 116  additive_expression : multiplicative_expression
 117                      | additive_expression '+' multiplicative_expression
 118                      | additive_expression '-' multiplicative_expression

 119  multiplicative_expression : cast_expression
 120                            | multiplicative_expression '*' cast_expression
 121                            | multiplicative_expression '/' cast_expression
 122                            | multiplicative_expression '%' cast_expression

 123  cast_expression : unary_expression
 124                  | '(' type_name ')' cast_expression

 125  unary_expression : postfix_expression
 126                   | unary_op cast_expression

 127  postfix_expression : primary_expression
 128                     | postfix_expression '(' ')'
 129                     | postfix_expression '(' argument_expression_list ')'
 130                     | postfix_expression INC
 131                     | postfix_expression DEC

 132  argument_expression_list : assignment_expression
 133                           | argument_expression_list ',' assignment_expression

 134  primary_expression : IDENT
 135                     | primary_expression '[' expression ']'
 136                     | INTEGER
 137                     | FLOATING
 138                     | STRING
 139                     | CHARACTER
 140                     | '(' expression ')'

 141  unary_op : '&'
 142           | '*'
 143           | '+'
 144           | '-'
 145           | '~'
 146           | '!'
 147           | INC
 148           | DEC

 149  type_name : type_list
 150            | type_list abstract_declarator

 151  abstract_declarator : pointer
 152                      | direct_abstract_declarator
 153                      | pointer direct_abstract_declarator

 154  direct_abstract_declarator : '(' abstract_declarator ')'
 155                             | '[' ']'
 156                             | '[' expression ']'
 157                             | direct_abstract_declarator '[' ']'
 158                             | direct_abstract_declarator '[' expression ']'
 159                             | '(' ')'
 160                             | '(' parameter_list ')'
 161                             | direct_abstract_declarator '(' ')'
 162                             | direct_abstract_declarator '(' parameter_list ')'

state 0
	$accept : . program $end  (0)

	IDENT  shift 1
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	'*'  shift 12
	'('  shift 13
	.  error

	program  goto 14
	pointer  goto 15
	external_declaration  goto 16
	declaration  goto 17
	function_definition  goto 18
	direct_declarator  goto 19
	declarator  goto 20
	type  goto 21
	type_list  goto 22


state 1
	direct_declarator : IDENT .  (67)

	.  reduce 67


state 2
	type : CONST .  (51)

	.  reduce 51


state 3
	type : SIGNED .  (52)

	.  reduce 52


state 4
	type : UNSIGNED .  (53)

	.  reduce 53


state 5
	type : SHORT .  (54)

	.  reduce 54


state 6
	type : LONG .  (55)

	.  reduce 55


state 7
	type : VOID .  (56)

	.  reduce 56


state 8
	type : INT .  (57)

	.  reduce 57


state 9
	type : CHAR .  (58)

	.  reduce 58


state 10
	type : FLOAT .  (59)

	.  reduce 59


state 11
	type : DOUBLE .  (60)

	.  reduce 60


state 12
	pointer : '*' .  (81)

	.  reduce 81


state 13
	direct_declarator : '(' . declarator ')'  (70)

	IDENT  shift 1
	'*'  shift 12
	'('  shift 13
	.  error

	pointer  goto 15
	direct_declarator  goto 19
	declarator  goto 23


state 14
	$accept : program . $end  (0)
	program : program . external_declaration  (2)

	$end  accept
	IDENT  shift 1
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	'*'  shift 12
	'('  shift 13
	.  error

	pointer  goto 15
	external_declaration  goto 24
	declaration  goto 17
	function_definition  goto 18
	direct_declarator  goto 19
	declarator  goto 20
	type  goto 21
	type_list  goto 22


state 15
	declarator : pointer . direct_declarator  (65)
	pointer : pointer . '*'  (82)

	IDENT  shift 1
	'*'  shift 25
	'('  shift 13
	.  error

	direct_declarator  goto 26


state 16
	program : external_declaration .  (1)

	.  reduce 1


state 17
	external_declaration : declaration .  (3)

	.  reduce 3


state 18
	external_declaration : function_definition .  (4)

	.  reduce 4


state 19
	declarator : direct_declarator .  (66)
	direct_declarator : direct_declarator . '[' expression ']'  (68)
	direct_declarator : direct_declarator . '[' ']'  (69)
	direct_declarator : direct_declarator . '(' parameter_list ')'  (71)
	direct_declarator : direct_declarator . '(' identifier_list ')'  (72)
	direct_declarator : direct_declarator . '(' ')'  (73)

	'('  shift 27
	'['  shift 28
	CONST  reduce 66
	SIGNED  reduce 66
	UNSIGNED  reduce 66
	SHORT  reduce 66
	LONG  reduce 66
	VOID  reduce 66
	INT  reduce 66
	CHAR  reduce 66
	FLOAT  reduce 66
	DOUBLE  reduce 66
	'='  reduce 66
	';'  reduce 66
	'{'  reduce 66
	')'  reduce 66
	','  reduce 66


state 20
	function_definition : declarator . compound_stmt  (12)
	function_definition : declarator . declaration_list compound_stmt  (14)

	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	'{'  shift 29
	.  error

	declaration  goto 30
	declaration_list  goto 31
	compound_stmt  goto 32
	type  goto 21
	type_list  goto 33


state 21
	type_list : type .  (50)

	.  reduce 50


state 22
	declaration : type_list . init_declarator_list ';'  (5)
	function_definition : type_list . declarator compound_stmt  (11)
	function_definition : type_list . declarator declaration_list compound_stmt  (13)
	type_list : type_list . type  (49)

	IDENT  shift 1
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	'*'  shift 12
	'('  shift 13
	.  error

	pointer  goto 15
	init_declarator_list  goto 34
	init_declarator  goto 35
	direct_declarator  goto 19
	declarator  goto 36
	type  goto 37


state 23
	direct_declarator : '(' declarator . ')'  (70)

	')'  shift 38
	.  error


state 24
	program : program external_declaration .  (2)

	.  reduce 2


state 25
	pointer : pointer '*' .  (82)

	.  reduce 82


state 26
	declarator : pointer direct_declarator .  (65)
	direct_declarator : direct_declarator . '[' expression ']'  (68)
	direct_declarator : direct_declarator . '[' ']'  (69)
	direct_declarator : direct_declarator . '(' parameter_list ')'  (71)
	direct_declarator : direct_declarator . '(' identifier_list ')'  (72)
	direct_declarator : direct_declarator . '(' ')'  (73)

	'('  shift 27
	'['  shift 28
	CONST  reduce 65
	SIGNED  reduce 65
	UNSIGNED  reduce 65
	SHORT  reduce 65
	LONG  reduce 65
	VOID  reduce 65
	INT  reduce 65
	CHAR  reduce 65
	FLOAT  reduce 65
	DOUBLE  reduce 65
	'='  reduce 65
	';'  reduce 65
	'{'  reduce 65
	')'  reduce 65
	','  reduce 65


state 27
	direct_declarator : direct_declarator '(' . parameter_list ')'  (71)
	direct_declarator : direct_declarator '(' . identifier_list ')'  (72)
	direct_declarator : direct_declarator '(' . ')'  (73)

	IDENT  shift 39
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	')'  shift 40
	.  error

	type  goto 21
	type_list  goto 41
	parameter_list  goto 42
	identifier_list  goto 43
	parameter_declaration  goto 44


state 28
	direct_declarator : direct_declarator '[' . expression ']'  (68)
	direct_declarator : direct_declarator '[' . ']'  (69)

	IDENT  shift 45
	INTEGER  shift 46
	FLOATING  shift 47
	CHARACTER  shift 48
	STRING  shift 49
	INC  shift 50
	DEC  shift 51
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'('  shift 55
	']'  shift 56
	'&'  shift 57
	'~'  shift 58
	'!'  shift 59
	.  error

	unary_op  goto 60
	expression  goto 61
	assignment_expression  goto 62
	constant_expression  goto 63
	conditional_expression  goto 64
	logical_or_expression  goto 65
	logical_and_expression  goto 66
	inclusive_or_expression  goto 67
	exclusive_or_expression  goto 68
	and_expression  goto 69
	equality_expression  goto 70
	relational_expression  goto 71
	shift_expression  goto 72
	additive_expression  goto 73
	multiplicative_expression  goto 74
	cast_expression  goto 75
	unary_expression  goto 76
	postfix_expression  goto 77
	primary_expression  goto 78


state 29
	compound_stmt : '{' . '}'  (24)
	compound_stmt : '{' . compound_stmt_contents '}'  (25)

	IDENT  shift 45
	INTEGER  shift 46
	FLOATING  shift 47
	CHARACTER  shift 48
	STRING  shift 49
	INC  shift 50
	DEC  shift 51
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	IF  shift 79
	SWITCH  shift 80
	DO  shift 81
	WHILE  shift 82
	FOR  shift 83
	RETURN  shift 84
	BREAK  shift 85
	CONTINUE  shift 86
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	';'  shift 87
	'{'  shift 29
	'}'  shift 88
	'('  shift 55
	'&'  shift 57
	'~'  shift 58
	'!'  shift 59
	.  error

	unary_op  goto 60
	declaration  goto 89
	stmt  goto 90
	compound_stmt  goto 91
	expression_stmt  goto 92
	selection_stmt  goto 93
	iteration_stmt  goto 94
	jump_stmt  goto 95
	compound_stmt_contents  goto 96
	expression  goto 97
	assignment_expression  goto 62
	constant_expression  goto 63
	conditional_expression  goto 64
	logical_or_expression  goto 65
	logical_and_expression  goto 66
	inclusive_or_expression  goto 67
	exclusive_or_expression  goto 68
	and_expression  goto 69
	equality_expression  goto 70
	relational_expression  goto 71
	shift_expression  goto 72
	additive_expression  goto 73
	multiplicative_expression  goto 74
	cast_expression  goto 75
	unary_expression  goto 76
	postfix_expression  goto 77
	primary_expression  goto 78
	type  goto 21
	type_list  goto 33


state 30
	declaration_list : declaration .  (16)

	.  reduce 16


state 31
	function_definition : declarator declaration_list . compound_stmt  (14)
	declaration_list : declaration_list . declaration  (15)

	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	'{'  shift 29
	.  error

	declaration  goto 98
	compound_stmt  goto 99
	type  goto 21
	type_list  goto 33


state 32
	function_definition : declarator compound_stmt .  (12)

	.  reduce 12


state 33
	declaration : type_list . init_declarator_list ';'  (5)
	type_list : type_list . type  (49)

	IDENT  shift 1
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	'*'  shift 12
	'('  shift 13
	.  error

	pointer  goto 15
	init_declarator_list  goto 34
	init_declarator  goto 35
	direct_declarator  goto 19
	declarator  goto 100
	type  goto 37


state 34
	declaration : type_list init_declarator_list . ';'  (5)
	init_declarator_list : init_declarator_list . ',' init_declarator  (61)

	';'  shift 101
	','  shift 102
	.  error


state 35
	init_declarator_list : init_declarator .  (62)

	.  reduce 62


state 36
	function_definition : type_list declarator . compound_stmt  (11)
	function_definition : type_list declarator . declaration_list compound_stmt  (13)
	init_declarator : declarator .  (63)
	init_declarator : declarator . '=' initializer  (64)

	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	'='  shift 103
	'{'  shift 29
	';'  reduce 63
	','  reduce 63

	declaration  goto 30
	declaration_list  goto 104
	compound_stmt  goto 105
	type  goto 21
	type_list  goto 33


state 37
	type_list : type_list type .  (49)

	.  reduce 49


state 38
	direct_declarator : '(' declarator ')' .  (70)

	.  reduce 70


state 39
	identifier_list : IDENT .  (79)

	.  reduce 79


state 40
	direct_declarator : direct_declarator '(' ')' .  (73)

	.  reduce 73


state 41
	type_list : type_list . type  (49)
	parameter_declaration : type_list . declarator  (76)
	parameter_declaration : type_list . abstract_declarator  (77)
	parameter_declaration : type_list .  (78)

	IDENT  shift 1
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	'*'  shift 12
	'('  shift 106
	'['  shift 107
	')'  reduce 78
	','  reduce 78

	pointer  goto 108
	direct_declarator  goto 19
	declarator  goto 109
	type  goto 37
	abstract_declarator  goto 110
	direct_abstract_declarator  goto 111


state 42
	direct_declarator : direct_declarator '(' parameter_list . ')'  (71)
	parameter_list : parameter_list . ',' parameter_declaration  (75)

	')'  shift 112
	','  shift 113
	.  error


state 43
	direct_declarator : direct_declarator '(' identifier_list . ')'  (72)
	identifier_list : identifier_list . ',' IDENT  (80)

	')'  shift 114
	','  shift 115
	.  error


state 44
	parameter_list : parameter_declaration .  (74)

	.  reduce 74


state 45
	primary_expression : IDENT .  (134)

	.  reduce 134


state 46
	primary_expression : INTEGER .  (136)

	.  reduce 136


state 47
	primary_expression : FLOATING .  (137)

	.  reduce 137


state 48
	primary_expression : CHARACTER .  (139)

	.  reduce 139


state 49
	primary_expression : STRING .  (138)

	.  reduce 138


state 50
	unary_op : INC .  (147)

	.  reduce 147


state 51
	unary_op : DEC .  (148)

	.  reduce 148


state 52
	unary_op : '+' .  (143)

	.  reduce 143


state 53
	unary_op : '-' .  (144)

	.  reduce 144


state 54
	unary_op : '*' .  (142)

	.  reduce 142


state 55
	cast_expression : '(' . type_name ')' cast_expression  (124)
	primary_expression : '(' . expression ')'  (140)

	IDENT  shift 45
	INTEGER  shift 46
	FLOATING  shift 47
	CHARACTER  shift 48
	STRING  shift 49
	INC  shift 50
	DEC  shift 51
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'('  shift 55
	'&'  shift 57
	'~'  shift 58
	'!'  shift 59
	.  error

	unary_op  goto 60
	expression  goto 116
	assignment_expression  goto 62
	constant_expression  goto 63
	conditional_expression  goto 64
	logical_or_expression  goto 65
	logical_and_expression  goto 66
	inclusive_or_expression  goto 67
	exclusive_or_expression  goto 68
	and_expression  goto 69
	equality_expression  goto 70
	relational_expression  goto 71
	shift_expression  goto 72
	additive_expression  goto 73
	multiplicative_expression  goto 74
	cast_expression  goto 75
	unary_expression  goto 76
	postfix_expression  goto 77
	primary_expression  goto 78
	type  goto 21
	type_list  goto 117
	type_name  goto 118


state 56
	direct_declarator : direct_declarator '[' ']' .  (69)

	.  reduce 69


state 57
	unary_op : '&' .  (141)

	.  reduce 141


state 58
	unary_op : '~' .  (145)

	.  reduce 145


state 59
	unary_op : '!' .  (146)

	.  reduce 146


state 60
	unary_expression : unary_op . cast_expression  (126)

	IDENT  shift 45
	INTEGER  shift 46
	FLOATING  shift 47
	CHARACTER  shift 48
	STRING  shift 49
	INC  shift 50
	DEC  shift 51
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'('  shift 55
	'&'  shift 57
	'~'  shift 58
	'!'  shift 59
	.  error

	unary_op  goto 60
	cast_expression  goto 119
	unary_expression  goto 76
	postfix_expression  goto 77
	primary_expression  goto 78


state 61
	direct_declarator : direct_declarator '[' expression . ']'  (68)
	expression : expression . ',' assignment_expression  (88)

	','  shift 120
	']'  shift 121
	.  error


state 62
	expression : assignment_expression .  (87)

	.  reduce 87


state 63
	assignment_expression : constant_expression . assignment_op assignment_expression  (90)

	'='  shift 122
	.  error

	assignment_op  goto 123


state 64
	assignment_expression : conditional_expression .  (89)
	constant_expression : conditional_expression .  (92)

	'='  reduce 92
	';'  reduce 89
	'}'  reduce 89
	':'  reduce 89
	')'  reduce 89
	','  reduce 89
	']'  reduce 89


state 65
	conditional_expression : logical_or_expression .  (93)
	conditional_expression : logical_or_expression . '?' expression ':' conditional_expression  (94)
	logical_or_expression : logical_or_expression . OR logical_and_expression  (96)

	OR  shift 124
	'?'  shift 125
	'='  reduce 93
	';'  reduce 93
	'}'  reduce 93
	':'  reduce 93
	')'  reduce 93
	','  reduce 93
	']'  reduce 93


state 66
	logical_or_expression : logical_and_expression .  (95)
	logical_and_expression : logical_and_expression . AND inclusive_or_expression  (98)

	AND  shift 126
	OR  reduce 95
	'='  reduce 95
	';'  reduce 95
	'}'  reduce 95
	':'  reduce 95
	')'  reduce 95
	','  reduce 95
	']'  reduce 95
	'?'  reduce 95


state 67
	logical_and_expression : inclusive_or_expression .  (97)
	inclusive_or_expression : inclusive_or_expression . '|' exclusive_or_expression  (100)

	'|'  shift 127
	AND  reduce 97
	OR  reduce 97
	'='  reduce 97
	';'  reduce 97
	'}'  reduce 97
	':'  reduce 97
	')'  reduce 97
	','  reduce 97
	']'  reduce 97
	'?'  reduce 97


state 68
	inclusive_or_expression : exclusive_or_expression .  (99)
	exclusive_or_expression : exclusive_or_expression . '^' and_expression  (102)

	'^'  shift 128
	AND  reduce 99
	OR  reduce 99
	'='  reduce 99
	';'  reduce 99
	'}'  reduce 99
	':'  reduce 99
	')'  reduce 99
	','  reduce 99
	']'  reduce 99
	'?'  reduce 99
	'|'  reduce 99


state 69
	exclusive_or_expression : and_expression .  (101)
	and_expression : and_expression . '&' equality_expression  (104)

	'&'  shift 129
	AND  reduce 101
	OR  reduce 101
	'='  reduce 101
	';'  reduce 101
	'}'  reduce 101
	':'  reduce 101
	')'  reduce 101
	','  reduce 101
	']'  reduce 101
	'?'  reduce 101
	'|'  reduce 101
	'^'  reduce 101


state 70
	and_expression : equality_expression .  (103)
	equality_expression : equality_expression . EQUALS relational_expression  (106)
	equality_expression : equality_expression . NOT_EQUALS relational_expression  (107)

	EQUALS  shift 130
	NOT_EQUALS  shift 131
	AND  reduce 103
	OR  reduce 103
	'='  reduce 103
	';'  reduce 103
	'}'  reduce 103
	':'  reduce 103
	')'  reduce 103
	','  reduce 103
	']'  reduce 103
	'?'  reduce 103
	'|'  reduce 103
	'^'  reduce 103
	'&'  reduce 103


state 71
	equality_expression : relational_expression .  (105)
	relational_expression : relational_expression . '<' shift_expression  (109)
	relational_expression : relational_expression . '>' shift_expression  (110)
	relational_expression : relational_expression . LESS_OR_EQUAL shift_expression  (111)
	relational_expression : relational_expression . GREATER_OR_EQUAL shift_expression  (112)

	LESS_OR_EQUAL  shift 132
	GREATER_OR_EQUAL  shift 133
	'<'  shift 134
	'>'  shift 135
	EQUALS  reduce 105
	NOT_EQUALS  reduce 105
	AND  reduce 105
	OR  reduce 105
	'='  reduce 105
	';'  reduce 105
	'}'  reduce 105
	':'  reduce 105
	')'  reduce 105
	','  reduce 105
	']'  reduce 105
	'?'  reduce 105
	'|'  reduce 105
	'^'  reduce 105
	'&'  reduce 105


state 72
	relational_expression : shift_expression .  (108)
	shift_expression : shift_expression . LEFT_SHIFT additive_expression  (114)
	shift_expression : shift_expression . RIGHT_SHIFT additive_expression  (115)

	LEFT_SHIFT  shift 136
	RIGHT_SHIFT  shift 137
	LESS_OR_EQUAL  reduce 108
	GREATER_OR_EQUAL  reduce 108
	EQUALS  reduce 108
	NOT_EQUALS  reduce 108
	AND  reduce 108
	OR  reduce 108
	'='  reduce 108
	';'  reduce 108
	'}'  reduce 108
	':'  reduce 108
	')'  reduce 108
	','  reduce 108
	']'  reduce 108
	'?'  reduce 108
	'|'  reduce 108
	'^'  reduce 108
	'&'  reduce 108
	'<'  reduce 108
	'>'  reduce 108


state 73
	shift_expression : additive_expression .  (113)
	additive_expression : additive_expression . '+' multiplicative_expression  (117)
	additive_expression : additive_expression . '-' multiplicative_expression  (118)

	'+'  shift 138
	'-'  shift 139
	LEFT_SHIFT  reduce 113
	RIGHT_SHIFT  reduce 113
	LESS_OR_EQUAL  reduce 113
	GREATER_OR_EQUAL  reduce 113
	EQUALS  reduce 113
	NOT_EQUALS  reduce 113
	AND  reduce 113
	OR  reduce 113
	'='  reduce 113
	';'  reduce 113
	'}'  reduce 113
	':'  reduce 113
	')'  reduce 113
	','  reduce 113
	']'  reduce 113
	'?'  reduce 113
	'|'  reduce 113
	'^'  reduce 113
	'&'  reduce 113
	'<'  reduce 113
	'>'  reduce 113


state 74
	additive_expression : multiplicative_expression .  (116)
	multiplicative_expression : multiplicative_expression . '*' cast_expression  (120)
	multiplicative_expression : multiplicative_expression . '/' cast_expression  (121)
	multiplicative_expression : multiplicative_expression . '%' cast_expression  (122)

	'*'  shift 140
	'/'  shift 141
	'%'  shift 142
	LEFT_SHIFT  reduce 116
	RIGHT_SHIFT  reduce 116
	LESS_OR_EQUAL  reduce 116
	GREATER_OR_EQUAL  reduce 116
	EQUALS  reduce 116
	NOT_EQUALS  reduce 116
	AND  reduce 116
	OR  reduce 116
	'='  reduce 116
	'+'  reduce 116
	'-'  reduce 116
	';'  reduce 116
	'}'  reduce 116
	':'  reduce 116
	')'  reduce 116
	','  reduce 116
	']'  reduce 116
	'?'  reduce 116
	'|'  reduce 116
	'^'  reduce 116
	'&'  reduce 116
	'<'  reduce 116
	'>'  reduce 116


state 75
	multiplicative_expression : cast_expression .  (119)

	.  reduce 119


state 76
	cast_expression : unary_expression .  (123)

	.  reduce 123


state 77
	unary_expression : postfix_expression .  (125)
	postfix_expression : postfix_expression . '(' ')'  (128)
	postfix_expression : postfix_expression . '(' argument_expression_list ')'  (129)
	postfix_expression : postfix_expression . INC  (130)
	postfix_expression : postfix_expression . DEC  (131)

	INC  shift 143
	DEC  shift 144
	'('  shift 145
	LEFT_SHIFT  reduce 125
	RIGHT_SHIFT  reduce 125
	LESS_OR_EQUAL  reduce 125
	GREATER_OR_EQUAL  reduce 125
	EQUALS  reduce 125
	NOT_EQUALS  reduce 125
	AND  reduce 125
	OR  reduce 125
	'='  reduce 125
	'+'  reduce 125
	'-'  reduce 125
	'*'  reduce 125
	'/'  reduce 125
	'%'  reduce 125
	';'  reduce 125
	'}'  reduce 125
	':'  reduce 125
	')'  reduce 125
	','  reduce 125
	']'  reduce 125
	'?'  reduce 125
	'|'  reduce 125
	'^'  reduce 125
	'&'  reduce 125
	'<'  reduce 125
	'>'  reduce 125


state 78
	postfix_expression : primary_expression .  (127)
	primary_expression : primary_expression . '[' expression ']'  (135)

	'['  shift 146
	LEFT_SHIFT  reduce 127
	RIGHT_SHIFT  reduce 127
	LESS_OR_EQUAL  reduce 127
	GREATER_OR_EQUAL  reduce 127
	EQUALS  reduce 127
	NOT_EQUALS  reduce 127
	INC  reduce 127
	DEC  reduce 127
	AND  reduce 127
	OR  reduce 127
	'='  reduce 127
	'+'  reduce 127
	'-'  reduce 127
	'*'  reduce 127
	'/'  reduce 127
	'%'  reduce 127
	';'  reduce 127
	'}'  reduce 127
	':'  reduce 127
	'('  reduce 127
	')'  reduce 127
	','  reduce 127
	']'  reduce 127
	'?'  reduce 127
	'|'  reduce 127
	'^'  reduce 127
	'&'  reduce 127
	'<'  reduce 127
	'>'  reduce 127


state 79
	selection_stmt : IF . '(' expression ')' compound_stmt  (32)
	selection_stmt : IF . '(' expression ')' compound_stmt ELSE compound_stmt  (33)

	'('  shift 147
	.  error


state 80
	selection_stmt : SWITCH . '(' expression ')' switch_clauses  (34)

	'('  shift 148
	.  error


state 81
	iteration_stmt : DO . stmt WHILE '(' expression ')' ';'  (36)

	IDENT  shift 45
	INTEGER  shift 46
	FLOATING  shift 47
	CHARACTER  shift 48
	STRING  shift 49
	INC  shift 50
	DEC  shift 51
	IF  shift 79
	SWITCH  shift 80
	DO  shift 81
	WHILE  shift 82
	FOR  shift 83
	RETURN  shift 84
	BREAK  shift 85
	CONTINUE  shift 86
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	';'  shift 87
	'{'  shift 29
	'('  shift 55
	'&'  shift 57
	'~'  shift 58
	'!'  shift 59
	.  error

	unary_op  goto 60
	stmt  goto 149
	compound_stmt  goto 91
	expression_stmt  goto 92
	selection_stmt  goto 93
	iteration_stmt  goto 94
	jump_stmt  goto 95
	expression  goto 97
	assignment_expression  goto 62
	constant_expression  goto 63
	conditional_expression  goto 64
	logical_or_expression  goto 65
	logical_and_expression  goto 66
	inclusive_or_expression  goto 67
	exclusive_or_expression  goto 68
	and_expression  goto 69
	equality_expression  goto 70
	relational_expression  goto 71
	shift_expression  goto 72
	additive_expression  goto 73
	multiplicative_expression  goto 74
	cast_expression  goto 75
	unary_expression  goto 76
	postfix_expression  goto 77
	primary_expression  goto 78


state 82
	iteration_stmt : WHILE . '(' expression ')' stmt  (35)

	'('  shift 150
	.  error

